<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/ticket_text_title"
        android:text="@string/ticket_text_title"
        android:textColor="@color/myPrimaryColor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_height="2dip"
        android:background="@color/myPrimaryColor"
        android:layout_below="@+id/ticket_text_title"
        android:layout_width="wrap_content"
        android:id="@+id/view1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ticketconfirmation_text_origem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketconfirmation_text_origem"
        android:textSize="20dp"
        android:textColor="@color/myTextPrimaryColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/ticketconfirmation_text_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ticketconfirmation_text_origem"
        android:layout_below="@+id/ticketconfirmation_text_origem"
        android:text="@string/ticketconfirmation_text_destino"
        android:textSize="20dp"
        android:textColor="@color/myTextPrimaryColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/ticketconfirmation_text_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ticketconfirmation_text_destino"
        android:layout_below="@+id/ticketconfirmation_text_destino"
        android:text="@string/ticketconfirmation_text_partida"
        android:textSize="20dp"
        android:textColor="@color/myTextPrimaryColor"
        android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewOrigem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ticketconfirmation_text_origem"
            android:layout_alignBottom="@+id/ticketconfirmation_text_origem"
            android:layout_toRightOf="@+id/ticketconfirmation_text_origem"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/myPrimaryColor"/>

        <TextView
            android:id="@+id/textViewDestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ticketconfirmation_text_destino"
            android:layout_alignBottom="@+id/ticketconfirmation_text_destino"
            android:layout_toRightOf="@+id/ticketconfirmation_text_destino"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/myPrimaryColor"/>

        <TextView
            android:id="@+id/textViewPartida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ticketconfirmation_text_partida"
            android:layout_alignBottom="@+id/ticketconfirmation_text_partida"
            android:layout_toRightOf="@+id/ticketconfirmation_text_partida"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/myPrimaryColor"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView_barcode"
            android:layout_centerHorizontal="true"/>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:background="@color/myPrimaryColor"
            android:text="@string/ticket_button_cancelar"/>

    </RelativeLayout>



    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<com.gc.materialdesign.views.ButtonRectangle-->
            <!--android:id="@+id/btnComprar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="70dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="@color/myPrimaryColor"-->
            <!--android:text="@string/ticketconfirmation_button_comprar"/>-->

    <!--</RelativeLayout>-->

</LinearLayout>